--- a/design/index.html
+++ b/design/index.html
@@ -31,6 +31,8 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, vero?</p>
         
         <button>Learn More</button>
+
+        <div></div>
         
         </div>
     </div>
